Fix next theme customized style wrong color

--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -161,6 +161,9 @@ blockquote {
   background: #1da1f2;
 }
 
-// .site-nav {
-//   background: $body-background-color
-// }
+/*
+ * for mobile navgation
+ */
+.site-nav {
+  background: $body-background-color
+}
